# yubikey-oath-krunner

./: .clang-tidy  .containerignore  .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTAINERIZED_TESTING.md  COVERAGE.md  Containerfile  DAEMON_ARCHITECTURE.md  DAEMON_REFACTOR_NOTES.md  Dockerfile.test  IMPROVEMENT_PLAN.md  Makefile.container  PERFORMANCE_INDEX.md  PERFORMANCE_REVIEW.md  PKGBUILD  QUICKSTART_CONTAINERS.md  QUICK_FIXES.md  README.md  REVIEW_SUMMARY.md  TEST_IMPLEMENTATION.md  docker-compose.test.yml  docker-compose.yml  krunner-yoath.sln  krunner-yoath.sln.DotSettings
src/: CMakeLists.txt
src/config/: CMakeLists.txt  device_card_layout.cpp  device_card_layout.h  device_card_painter.cpp  device_card_painter.h  device_delegate.cpp  device_delegate.h  i_device_icon_resolver.h  kcm_krunner_yubikey.desktop  logging_categories.cpp  logging_categories.h  oath_config.cpp  oath_config.h  oath_config.ui  oath_config_icon_resolver.cpp  oath_config_icon_resolver.h  oath_device_list_model.cpp  oath_device_list_model.h  relative_time_formatter.cpp  relative_time_formatter.h  yubikey_config.cpp  yubikey_config.h  yubikey_config.ui  yubikey_config_icon_resolver.cpp  yubikey_config_icon_resolver.h  yubikey_device_model.cpp  yubikey_device_model.h
src/config/resources/: config.qrc
src/daemon/: CMakeLists.txt  app-pl.jkolo.yubikey.oath.daemon.service  logging_categories.cpp  logging_categories.h  main.cpp  oath_dbus_service.cpp  oath_dbus_service.h  org.kde.plasma.krunner.yubikey.desktop  org.kde.plasma.krunner.yubikey.service  org.kde.plasma.krunner.yubikey.xml  pl.jkolo.yubikey.oath.daemon.desktop  pl.jkolo.yubikey.oath.daemon.service  plasma-yubikey-oath-daemon.service  version.h.in  yubikey_dbus_service.cpp  yubikey_dbus_service.h
src/daemon/actions/: action_executor.cpp  action_executor.h  oath_action_coordinator.cpp  oath_action_coordinator.h  yubikey_action_coordinator.cpp  yubikey_action_coordinator.h
src/daemon/cache/: credential_cache_searcher.cpp  credential_cache_searcher.h
src/daemon/clipboard/: clipboard_manager.cpp  clipboard_manager.h
src/daemon/config/: daemon_configuration.cpp  daemon_configuration.h
src/daemon/dbus/: credential_object_manager.cpp  credential_object_manager.h  oath_credential_object.cpp  oath_credential_object.h  oath_device_object.cpp  oath_device_object.h  oath_manager_object.cpp  oath_manager_object.h  pl.jkolo.yubikey.oath.Credential.xml  pl.jkolo.yubikey.oath.Device.xml  pl.jkolo.yubikey.oath.DeviceSession.xml  pl.jkolo.yubikey.oath.Manager.xml  yubikey_credential_object.cpp  yubikey_credential_object.h  yubikey_device_object.cpp  yubikey_device_object.h  yubikey_manager_object.cpp  yubikey_manager_object.h
src/daemon/formatting/: code_validator.cpp  code_validator.h
src/daemon/infrastructure/: device_reconnect_coordinator.cpp  device_reconnect_coordinator.h  pcsc_worker_pool.cpp  pcsc_worker_pool.h
src/daemon/input/: modifier_key_checker.cpp  modifier_key_checker.h  portal_text_input.cpp  portal_text_input.h  text_input_factory.cpp  text_input_factory.h  text_input_provider.cpp  text_input_provider.h  wayland_text_input.cpp  wayland_text_input.h  x11_text_input.cpp  x11_text_input.h
src/daemon/notification/: dbus_notification_manager.cpp  dbus_notification_manager.h
src/daemon/oath/: extended_device_info_fetcher.cpp  extended_device_info_fetcher.h  management_protocol.cpp  oath_device.h  (+25 more)
src/krunner/: CMakeLists.txt  krunner_yubikey.notifyrc  logging_categories.cpp  logging_categories.h  oathrunner.cpp  oathrunner.h  plasma-runner-yubikey.desktop  yubikeyrunner.cpp  yubikeyrunner.h  yubikeyrunner.json
src/shared/: CMakeLists.txt
tests/: .clang-tidy  CMakeLists.txt  test_action_executor.cpp  test_action_manager.cpp  test_async_result.cpp  test_brand_detection.cpp  test_clipboard_manager.cpp  test_code_validator.cpp  test_credential_finder.cpp  test_credential_formatter.cpp  test_credential_id_encoder.cpp  test_credential_service.cpp  test_device_capabilities.cpp  test_device_card_layout.cpp  test_device_icon_resolver.cpp  test_device_lifecycle_service.cpp  test_device_reconnect_coordinator.cpp  test_display_strategies.cpp  test_e2e_device_lifecycle.cpp  test_flexible_display_strategy.cpp  test_management_protocol.cpp  test_match_builder.cpp  test_modifier_key_checker.cpp  test_nitrokey_model_detector.cpp  test_notification_orchestrator.cpp  test_notification_utils.cpp  test_oath_database.cpp  test_oath_manager_object.cpp  test_oath_protocol.cpp  test_password_derivation.cpp  test_password_service.cpp  test_pcsc_worker_pool.cpp  test_proxy_unit.cpp  test_relative_time_formatter.cpp  test_result.cpp  test_secret_storage.cpp  test_secure_logging.cpp  test_secure_memory.cpp  test_touch_handler.cpp  test_touch_workflow_coordinator.cpp  (+3 more)
tests/fixtures/: test_credential_fixture.h  test_device_fixture.h
tests/helpers/: test_dbus_session.cpp  test_dbus_session.h
tests/mocks/: mock_clipboard_manager.cpp  mock_clipboard_manager.h  mock_configuration_provider.cpp  mock_configuration_provider.h  mock_daemon_configuration.cpp  mock_daemon_configuration.h  mock_dbus_notification_manager.cpp  mock_dbus_notification_manager.h  mock_notification_orchestrator.cpp  mock_notification_orchestrator.h  mock_oath_action_coordinator.cpp  mock_oath_action_coordinator.h  mock_oath_database.cpp  mock_oath_database.h  mock_oath_device.cpp  mock_oath_device.h  mock_oath_device_manager.cpp  mock_oath_device_manager.h  mock_oath_service.cpp  mock_oath_service.h  mock_secret_storage.cpp  mock_secret_storage.h  mock_text_input_provider.cpp  mock_text_input_provider.h  mock_touch_handler.cpp  mock_touch_handler.h  mock_yubikey_action_coordinator.cpp  mock_yubikey_action_coordinator.h  mock_yubikey_database.cpp  mock_yubikey_database.h  mock_yubikey_device_manager.cpp  mock_yubikey_device_manager.h  mock_yubikey_oath_device.cpp  mock_yubikey_oath_device.h  mock_yubikey_service.cpp  mock_yubikey_service.h  virtual_nitrokey.cpp  virtual_nitrokey.h  virtual_oath_device.cpp  virtual_oath_device.h  (+2 more)
(+263 files in other folders)
